--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Pizzeria</title>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus consectetur dolore eum reiciendis. Itaque molestias debitis facere laborum quidem alias deleniti rem maiores quia totam officia, eaque odio voluptatibus minus?</p>
+<h1>LA FLORENTINA</h1>
+
 </head>
-<body>
-Test déploiement.
+
+
 </body>
+<title>Pizzeria</title>
+<div>
+<ul>
+    <li>
+        <nav>
+            <em>Accueil</em>
+        </nav>
+
+    </li>
+    
+
+    <li>
+        <nav>
+            <em>Nos Pizzas</em>
+        </nav>
+
+    </li>
+
+
+    <li>
+        <nav>
+            <em>Nos Pizzas</em>
+        </nav>
+
+    </li>
+</ul>
+</div>
+<div>
+<p>La florentina a ouvert ses portes en 2000</p>
+<p>nous sommes une équipe de passionnés</p>
+<p>l'amour des pizzas nous amène à inventer en permanance</p>
+<p>Revenez souvent pour decouvrir nos dernières oeuvres ;)</p>
+</div>
+
+<h2>je suis une grand voyageur!</h2>
+<p>bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</p>
+
+<body>
+<footer>
+    <p>copyright la florentina- tout droit réservé</p>
+    <ins>nous contacter</ins>
+
+</footer>    
 </html>
