--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <ul>
     <li>
         <nav>
-            <em>Accueil</em>
+            <ins>Accueil</ins>
         </nav>
 
     </li>
@@ -20,7 +20,7 @@
 
     <li>
         <nav>
-            <em>Nos Pizzas</em>
+            <ins>Nos Pizzas</ins>
         </nav>
 
     </li>
@@ -28,7 +28,7 @@
 
     <li>
         <nav>
-            <em>Nos Pizzas</em>
+            <ins>Nos Pizzas</ins>
         </nav>
 
     </li>
