--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
     
 
     <li>
-        <nav>
-            <ins>Nos Pizzas</ins>
-        </nav>
+        <a href="List_pizzas.html" target="_blank">Nos pizzas</a>
 
     </li>
 
 
     <li>
         <nav>
-            <ins>Nos Pizzas</ins>
+            <ins>contact</ins>
         </nav>
 
     </li>
