--- a/tableau.html
+++ b/tableau.html
@@ -1,7 +1,10 @@
 !DOCTYPE html>
 <html>
-<head></head>
+<head>
 <h1>LA FLORENTINA</h1>
+</head>
+
+<body>
 
 <table border="5">
     <tbody>
@@ -23,4 +26,8 @@
 
 
 </table>
+</body>
+<footer>
+    
+</footer>
 </html>
