--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 
 
     <li>
-        <nav>
-            <ins>contact</ins>
-        </nav>
+        <a href="contact.html" target="_blank">Nous contacter</a>
 
     </li>
 </ul>
