--- a/contact.html
+++ b/contact.html
@@ -8,28 +8,28 @@
 <form action="/send_contact" method="post"></form>
 
 <label for="nom">nom</label>
-<input type="text" name="nom" id="nom">
+<input type="text" name="nom" id="nom"><br>
 
 <label for="prenom">prenom</label>
-<input type="text" name="prenom" id="prenom">
+<input type="text" name="prenom" id="prenom"><br>
 
 <label for="email">email</label>
-    <select id="email" multiple>
-        <option value="pizza@wanadoo.fr">France</option>
-        <option value="dominos@monmail.com">Belgique</option>
-        <option value="hut@mail.com">Portugal</option>
+    <select id="email" multiple><br>
+        <option value="pizza@wanadoo.fr">florentina</option>
+        <option value="dominos@monmail.com">dominos</option>
+        <option value="hut@mail.com">pizza hut</option>
     </select>
 
 <label for="telephone">téléphone</label>
-    <select id="telephone" multiple>
-        <option value="0467543298">France</option>
-        <option value="0467543098">Belgique</option>
-        <option value="0987653232">Portugal</option>
+    <select id="telephone" multiple><br>
+        <option value="0467543298">bernardette</option>
+        <option value="0467543098">jean gilles</option>
+        <option value="0987653232">gauvin</option>
     </select>
 
 
 <textarea rows="10" cols="100"></textarea>
-<button type="submit">Valider</button>
+<button type="submit">Valider</button><br>
 
 </form>
     
