--- a/contact.html
+++ b/contact.html
@@ -14,22 +14,23 @@
 <input type="text" name="prenom" id="prenom"><br>
 
 <label for="email">email</label>
-    <select id="email" multiple><br>
+    <select id="email" multiple>
         <option value="pizza@wanadoo.fr">florentina</option>
         <option value="dominos@monmail.com">dominos</option>
         <option value="hut@mail.com">pizza hut</option>
-    </select>
+    </select><br>
 
 <label for="telephone">téléphone</label>
-    <select id="telephone" multiple><br>
+    <select id="telephone" multiple>
         <option value="0467543298">bernardette</option>
         <option value="0467543098">jean gilles</option>
         <option value="0987653232">gauvin</option>
-    </select>
+    </select><br>
 
 
 <textarea rows="10" cols="100"></textarea>
-<button type="submit">Valider</button><br>
+<br>
+<button type="submit">Valider</button>
 
 </form>
     
