un autre commit

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <a href="contact.html" target="_blank">Nous contacter</a>
 
     </li>
+
+    <li>
+        <a href="moncv.html" target="_blank">moncv</a>
+
+    </li>
 </ul>
 </div>
 <div>
