--- a/experiences.html
+++ b/experiences.html
@@ -1,9 +1,13 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>curriculum vitae</title>
 </head>
-<h1>Fethi DIF</h1>
+
+
+<body>
+
+    <h1>Fethi DIF</h1>
 <h3>Developpeur JAVA full stck</h3>
 
 <aside>
@@ -11,9 +15,8 @@
         <source srcset="\moi.png" media="(width: 639px)">
         <img src="\moi.png" alt="ma photo">
     </picture>
+    
 </aside>
-
-<body>
     <h3>Experiences professionnelles</h3>
     <ul>
         <li><h4><em>OPÉRATEUR DE PRODUCTION</em></h4>
