--- a/hobbies.html
+++ b/hobbies.html
@@ -1,11 +1,10 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>Hobbies</title>
 </head>
 <body>
     
-</body>
 <h3>hobbies</h3>
 <ul>
     <li>photographie</li>
@@ -17,7 +16,7 @@
     <li>jardinage</li>
 </ul>
 
+<footer></footer>
 </body>
 
 
-<footer></footer>
