--- a/moncv.html
+++ b/moncv.html
@@ -1,8 +1,12 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>curriculum vitae</title>
 </head>
+
+
+
+<body>
 <h1>Fethi DIF</h1>
 <h3>Developpeur JAVA full stck</h3>
 
@@ -13,24 +17,21 @@
     </picture>
 </aside>
 
+<h3>Experiences professionnelles</h3>
 
-
-<body>
-<H3>Experiences professionnelles</H3>
-
-<a href="experiences.html" target="mes experiences"></a>
+<a href="experiences.html" target="_blank">mes experiences</a>
 
 
 
 
-<H3>Hobbies</H3>
+<h3>Hobbies</h3>
 
-<p>pour acceder a mes hobbies cliquez<a href="hobbies.html" target="_blank">ICI</a></p>
+<p>pour acceder a mes hobbies cliquez<a href="hobbies.html" target="_blank">hobbies</a></p>
 
 
-
+<footer></footer>
 
 </body>
 
 
-<footer></footer>
+
