--- a/moncv.html
+++ b/moncv.html
@@ -15,7 +15,13 @@
         <source srcset="\moi.png" media="(width: 639px)">
         <img src="\moi.png" alt="ma photo">
     </picture>
+    <a href="contactez-moi.html" target="_blank">Adresse postale</a>
+
 </aside>
+
+<h3>Formations</h3>
+
+<a href="Formations.html" target="_blank">mes formations</a>
 
 <h3>Experiences professionnelles</h3>
 
