--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <li>
         <a href="moncv.html" target="_blank">moncv</a>
 
+    <li>
+        <a href="todolist.html" target="_blank">ma liste</a>
+    
+    </li>
+
     </li>
 </ul>
 </div>
