--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
         <a href="todolist.html" target="_blank">ma liste</a>
     
     </li>
+    li>
+        <a href="pizzeria.html" target="_blank">ma pizza</a>
 
-    </li>
+    <li>
+
+    
 </ul>
 </div>
 <div>
